--- a/app/src/main/res/layout/layout_catalog_item.xml
+++ b/app/src/main/res/layout/layout_catalog_item.xml
@@ -2,7 +2,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -11,11 +12,13 @@
 
         <!-- Media -->
         <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="194dp"
-            app:srcCompat="@drawable/media"
+            android:id="@+id/image"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            app:srcCompat="@drawable/ic_image_64"
             android:scaleType="centerCrop"
-            android:contentDescription="@string/content_description_media"
+            android:contentDescription="@string/app_name"
+            android:layout_gravity="center"
             />
 
         <LinearLayout
@@ -26,24 +29,27 @@
 
             <!-- Title, secondary and supporting text -->
             <TextView
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/title"
+                android:text="@string/text_name_customer"
                 android:textAppearance="?attr/textAppearanceTitleMedium"
                 />
             <TextView
+                android:id="@+id/tv_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="@string/secondary_text"
+                android:text="@string/text_price"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 android:textColor="?android:attr/textColorSecondary"
                 />
             <TextView
+                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="@string/supporting_text"
+                android:text="@string/app_name"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 android:textColor="?android:attr/textColorSecondary"
                 />
@@ -57,16 +63,18 @@
             android:layout_margin="8dp"
             android:orientation="horizontal">
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:text="@string/action_1"
+                android:text="@string/text_share"
                 style="?attr/borderlessButtonStyle"
                 />
             <com.google.android.material.button.MaterialButton
+                android:id="@+id/btn_sell"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/action_2"
+                android:text="@string/text_sell"
                 style="?attr/borderlessButtonStyle"
                 />
         </LinearLayout>
