--- a/app/src/main/res/layout/dialog_add_product.xml
+++ b/app/src/main/res/layout/dialog_add_product.xml
@@ -42,7 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/text_price"
-            android:text="0,00"
+            android:text="@string/text_price_init"
             android:inputType="numberDecimal" />
     </com.google.android.material.textfield.TextInputLayout>
 
