--- a/app/src/main/res/layout/layout_expense_item.xml
+++ b/app/src/main/res/layout/layout_expense_item.xml
@@ -21,14 +21,13 @@
             android:textAppearance="?attr/textAppearanceHeadline6" />
 
         <TextView
-            android:id="@+id/tv_price"
+            android:id="@+id/tv_items"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/text_price"
             android:textAppearance="?attr/textAppearanceBody2"
-            android:textColor="?android:attr/textColorSecondary"
-            android:visibility="gone"/>
+            android:textColor="?android:attr/textColorSecondary" />
 
         <TextView
             android:id="@+id/tv_date"
@@ -40,5 +39,16 @@
             android:textColor="?android:attr/textColorSecondary" />
 
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/tv_menu"
+        android:layout_width="35dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:paddingEnd="16dp"
+        android:text="&#8942;"
+        android:textSize="18sp"/>
 
 </com.google.android.material.card.MaterialCardView>
