--- a/app/src/main/res/menu/menu_expenses_item.xml
+++ b/app/src/main/res/menu/menu_expenses_item.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="@string/text_view_details"
+        android:title="@string/text_details"
         android:id="@+id/menu_view"/>
     <item
         android:title="@string/text_edit"
