--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -16,4 +16,10 @@
 
         <item name="android:textColor">#FFCAC4D0</item>
     </style>
+
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/idf2</item>
+        <item name="postSplashScreenTheme">@style/Theme.DigitalForce</item>
+    </style>
 </resources>
