--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,6 @@
     <dimen name="size_image_dialog_add_product">240dp</dimen>
     <dimen name="size_btn_item_list">48dp</dimen>
 
+    <dimen name="size_img_card_home">48dp</dimen>
+
 </resources>
