--- a/app/src/main/res/layout/layout_catalog_item.xml
+++ b/app/src/main/res/layout/layout_catalog_item.xml
@@ -69,7 +69,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:text="@string/text_share"
+                android:text="@string/text_share_pdf"
                 style="?attr/borderlessButtonStyle"
                 />
             <com.google.android.material.button.MaterialButton
@@ -77,6 +77,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text_sell"
+                android:visibility="gone"
                 style="?attr/borderlessButtonStyle"
                 />
         </LinearLayout>
