--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:text="@string/list_expense_empty"
+        android:text="@string/list_sale_empty"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
         android:visibility="gone"/>
 
