--- a/app/src/main/res/navigation/nav_new_sale.xml
+++ b/app/src/main/res/navigation/nav_new_sale.xml
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/Second2Fragment"
-        android:name="com.skysam.hchirinos.digitalforce.ui.sales.newSale.Second2Fragment"
+        android:name="com.skysam.hchirinos.digitalforce.ui.sales.newSale.SecondFragment"
         tools:layout="@layout/fragment_new_sale_second">
 
         <action
