--- a/app/src/main/res/layout/fragment_sales.xml
+++ b/app/src/main/res/layout/fragment_sales.xml
@@ -41,8 +41,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/layout_catalog_item"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:visibility="gone"/>
 
     <com.airbnb.lottie.LottieAnimationView
