--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -52,8 +52,7 @@
                 <item
                     android:id="@+id/nav_stats"
                     android:icon="@drawable/ic_stats_24"
-                    android:title="@string/drawer_stats"
-                    android:visible="false"/>
+                    android:title="@string/drawer_stats" />
             </menu>
         </item>
     </group>
